Expand on why lists can masquerade as atoms.

--- a/www-hakyll/drafts/2022-01-19-z3-tracing.rst
+++ b/www-hakyll/drafts/2022-01-19-z3-tracing.rst
@@ -350,7 +350,8 @@ Unexploded Atoms
 ----------------
 
 To help get pretty printing going I replaced each call to ``Atom`` with a call
-to ``justReadSExpr``, avoiding lists masquerading as atoms.
+to ``justReadSExpr``, avoiding lists masquerading as atoms when the string
+within the atom is itself an s-expression.
 
 .. code:: haskell
 
