Mention the fix and merge for trailing spaces in s-expressions.

--- a/www-hakyll/drafts/2022-01-19-z3-tracing.rst
+++ b/www-hakyll/drafts/2022-01-19-z3-tracing.rst
@@ -55,6 +55,8 @@ This the fix for that.
     +                          foldr (\e m -> showChar ' ' . showsSExpr e . m)
     +                          (showChar ')') es
 
+I contributed this fix upstream. It's been merged.
+
 Choosing an S-Expression Printer
 --------------------------------
 
